cmake_minimum_required(VERSION 3.30)
project(TP1_ENSEA_IN_THE_SHELL C)

set(CMAKE_C_STANDARD 11)

add_executable(TP1_ENSEA_IN_THE_SHELL main.c
        question1.c
        question1.h
        question2.c
        question2.h
        question3.c
        question3.h
        question4.c
        question4.h
        question5.c
        question5.h
        question6.c
        question6.h
        question7.c
        question7.h
        question8.c
        question8.h)
